# anki-templates

./: .editorconfig  .gitignore  README.md  pyproject.toml
recipes/: anki_to_source.yaml  source_to_anki.yaml
scripts/: build.sh  conjugate_verbs.py  normalize_verbs.py
src/data/: Japanese - Kanji.csv  Sentences.csv  Verb Conjugations.csv  Vocabulary.csv  kanji_radicals.csv
src/headers/: default.yaml
src/note_models/Japanese - Kanji/: Japanese - Kanji.yaml  Recognition.html
src/note_models/Radicals/: Recognition.html  model.yaml
src/note_models/Sentences/: Reading.html  Sentences.yaml  Speaking.html
src/note_models/Verb Conjugations/: Dictionary Form.html  Past Tense (Affirmative).html  Past Tense (Negative).html  Present Tense (Affirmative).html  Present Tense (Negative).html  Te Form.html  Verb Conjugations.yaml  Volitional Form.html
src/note_models/Vocabulary/: Card 2.html  Card.html  Reverse.html  Vocabulary.yaml
src/shared/: _foundation.css
verb_conjugation/: dictionary_form_back.html  dictionary_form_front.html  past_affirmative_back.html  past_affirmative_front.html  past_negative_back.html  past_negative_front.html  present_affirmative_back.html  present_affirmative_front.html  present_negative_back.html  present_negative_front.html
vocabulary/: _foundation.css  back.html  front.html  reverse_back.html  reverse_front.html
