[tool.poetry]
name = "anki-templates"
version = "0.1.0"
description = "These are my forever in flux Anki cards and templates. There are many like them, but these are mine."
authors = ["Justin Williams <justinw@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
Brain-Brew = "^0.3.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
