[tool.poetry]
name = "anki-templates"
version = "0.1.0"
description = "These are my forever in flux Anki cards and templates. There are many like them, but these are mine."
authors = ["Justin Williams <justinw@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
Brain-Brew = "^0.3.6"
pylint = "^2.14.4"
autopep8 = "^1.6.0"
JapaneseVerbConjugator = "^1.0.1"
PyKatsuyou = "^1.1.0"
pandas = "^1.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
